# cloud-asset-intelligence

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: fingerprint-specification.md  future-phases.md  implementation-guide.md  partial-matching.md  phase1-tag-fingerprinting.md  problem-statement.md
examples/project-fingerprints/: aws-account-baseline.json
src/cloud_asset_intel/: __init__.py  cli.py  fingerprint.py  matcher.py  registry.py  scanner.py
tests/: test_fingerprint.py
