[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-asset-intelligence"
version = "0.1.0"
description = "Forensic discovery and analysis of cloud resources to identify orphaned infrastructure"
authors = [{name = "Stephen Abbott"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["aws", "cloud", "infrastructure", "terraform", "orphan-detection", "finops", "cost-optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "boto3>=1.28.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
cloud-asset-intel = "cloud_asset_intel.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/cloud-asset-intelligence"
Documentation = "https://github.com/yourusername/cloud-asset-intelligence/blob/main/README.md"
Repository = "https://github.com/yourusername/cloud-asset-intelligence"
Issues = "https://github.com/yourusername/cloud-asset-intelligence/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_asset_intel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
